# Synapse-YT-Companion-app

./: README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  4b8e17982eb0_add_notes_title_and_updated_at.py
backend/app/: ai_service.py  app.py  database.py  main.py  models.py  schemas.py  youtube_api.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
